--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,10 @@
     "adf-widget-clock": "^0.1.3",
     "adf-widget-table": "^0.1.0",
     "adf-widget-wysiwyg": "^0.1.4",
+    "adf-widget-markdown": "^0.1.0",
     "angular": "1.4.x",
-    "angular-route": "1.4.x"
+    "angular-route": "1.4.x",
+    "angular-chart.js": "^1.1.1"
   },
   "resolutions": {
     "angular": "1.4.x",
