--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,9 @@
     "adf-widget-markdown": "^0.1.0",
     "angular": "1.4.x",
     "angular-route": "1.4.x",
-    "angular-chart.js": "^1.1.1"
+    "angular-chart.js": "^1.1.1",
+    "angular-ui-select": "^0.19.8",
+    "angular-animate": "^1.6.4"
   },
   "resolutions": {
     "angular": "1.4.x",
