--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,7 @@
     "angular-route": "1.4.x",
     "angular-chart.js": "^1.1.1",
     "angular-ui-select": "^0.19.8",
-    "angular-animate": "^1.6.4"
+    "angular-animate": "^1.4.x"
   },
   "resolutions": {
     "angular": "1.4.x",
