--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,9 @@
     "angular-route": "1.4.x",
     "angular-chart.js": "^1.1.1",
     "angular-ui-select": "^0.19.8",
-    "angular-animate": "^1.4.x"
+    "angular-animate": "^1.4.x",
+    "angular-gauge": "^2.1.1",
+    "angular-color-picker": "angularjs-color-picker#^3.3.0"
   },
   "resolutions": {
     "angular": "1.4.x",
